--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
     "firebase": "^11.1.0",
+    "keep-react": "^1.6.1",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.471.1",
+    "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
