--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.0.2",
+    "react-select": "^5.9.0",
     "react-spinners": "^0.15.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
