--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.2",
     "react-select": "^5.9.0",
     "react-spinners": "^0.15.0",
