--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "keep-react": "^1.6.1",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.471.1",
+    "motion": "^11.18.0",
     "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
