--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.0",
     "react-loading-skeleton": "^3.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.2",
