--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.3",
     "embla-carousel-autoplay": "^8.5.2",
     "firebase": "^11.1.0",
     "keep-react": "^1.6.1",
