--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
