--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router-dom": "^7.0.2",
     "react-select": "^5.9.0",
     "react-spinners": "^0.15.0",
+    "sweetalert2": "^11.15.10",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
@@ -54,6 +55,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
+    "sass-embedded": "^1.83.4",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.1"
   }
