--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-organizational-chart": "^2.2.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.2",
     "react-select": "^5.9.0",
